# cpp-traffic-simulation

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  Doxyfile  Highway.cpp  Highway.h  Simulation.cpp  Simulation.h  Vehicle.cpp  Vehicle.h  test.cpp  traffic-simulation.cpp  traffic-simulation.h
test/: test_input.txt
